--- a/src/GatewayService/appsettings.Development.json
+++ b/src/GatewayService/appsettings.Development.json
@@ -7,10 +7,24 @@
   },
   "ReverseProxy": {
     "Routes": {
-      "auctions": {
+      "auctionsRead": {
         "ClusterId": "auctions",
         "Match": {
-          "Path": "/auctions/{**catch-all}"
+          "Path": "/auctions/{**catch-all}",
+          "Methods": [ "GET" ]
+        },
+        "Transforms": [
+          {
+            "PathPattern": "api/auctions/{**catch-all}"
+          }
+        ]
+      },
+      "auctionsWrite": {
+        "ClusterId": "auctions",
+        "AuthorizationPolicy": "default",
+        "Match": {
+          "Path": "/auctions/{**catch-all}",
+          "Methods": [ "POST", "PUT", "DELETE" ]
         },
         "Transforms": [
           {
@@ -47,5 +61,6 @@
         }
       }
     }
-  }
+  },
+  "IdentityServiceUrl": "http://localhost:5000"
 }
