--- a/src/BiddingService/appsettings.Development.json
+++ b/src/BiddingService/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgrespw;Database=auctions"
+    "BidDbConnection": "mongodb://root:mongopw@localhost"
   },
   "IdentityServiceUrl": "http://localhost:5000",
   "RabbitMq": {
