--- a/src/AuctionService/AuctionService.csproj
+++ b/src/AuctionService/AuctionService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
@@ -10,6 +10,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+		<PackageReference Include="Grpc.AspNetCore" Version="2.62.0" />
 		<PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.1.1" />
 		<PackageReference Include="MassTransit.RabbitMQ" Version="8.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.13" />
@@ -25,6 +26,14 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Contracts\Contracts.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Protobuf Include="protos/auctions.proto" GrpcServices="Server" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Folder Include="Services\" />
 	</ItemGroup>
 
 </Project>
