--- a/src/AuctionService/Properties/launchSettings.json
+++ b/src/AuctionService/Properties/launchSettings.json
@@ -6,8 +6,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:7001"
+      "dotnetRunMessages": true
     },
     "Docker": {
       "commandName": "Docker",
