--- a/src/NotificationService/Dockerfile
+++ b/src/NotificationService/Dockerfile
@@ -13,12 +13,12 @@ COPY ["src/Contracts/Contracts.csproj", "src/Contracts/Contracts.csproj"]
 
 RUN dotnet restore "Carsties.sln"
 
-COPY ["src/GatewayService", "src/GatewayService"]
+COPY ["src/NotificationService", "src/NotificationService"]
 COPY ["src/Contracts", "src/Contracts"]
-WORKDIR "/app/src/GatewayService"
+WORKDIR "/app/src/NotificationService"
 RUN dotnet publish -c Release -o /app/src/out
 
 FROM mcr.microsoft.com/dotnet/aspnet:7.0
 WORKDIR /app
 COPY --from=build /app/src/out .
-ENTRYPOINT ["dotnet", "GatewayService.dll"]
+ENTRYPOINT ["dotnet", "NotificationService.dll"]
