--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.0",
     "date-fns": "^3.6.0",
     "flowbite-react": "^0.9.0",
     "next": "14.2.3",
