--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,121 +2,180 @@ services:
   postgres:
     image: postgres
     environment:
-        - POSTGRES_PASSWORD=postgrespw
+      - POSTGRES_PASSWORD=postgrespw
     ports:
-        - 5432:5432
+      - 5432:5432
     volumes:
-        - /var/lib/postgresql/data
+      - /var/lib/postgresql/data
+    networks:
+      custom:
 
   mongodb:
     image: mongo
-    environment: 
-        - MONGO_INITDB_ROOT_USERNAME=root
-        - MONGO_INITDB_ROOT_PASSWORD=mongopw
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=mongopw
     ports:
-        - 27017:27017
+      - 27017:27017
     volumes:
-        - /var/lib/mongodb/data
+      - /var/lib/mongodb/data
+    networks:
+      custom:
 
   rabbitmq:
     image: rabbitmq:3.13.0-rc.2-management-alpine
     ports:
-        - 5672:5672
-        - 15672:15672 
+      - 5672:5672
+      - 15672:15672
+    networks:
+      custom:
+
+  nginx-proxy:
+    image: nginxproxy/nginx-proxy
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./devcerts:/etc/nginx/certs
+    networks:
+      custom:
 
   auction-svc:
     image: crossdev1989/auction-svc:latest
     build:
-        context: .
-        dockerfile: src/AuctionService/Dockerfile
+      context: .
+      dockerfile: src/AuctionService/Dockerfile
     environment:
-        - ASPNETCORE_ENVIRONMENT=Development
-        - ASPNETCORE_URLS=http://+:80
-        - ASPNETCORE_URLS=http://+:7777
-        - RabbitMq__Host=rabbitmq
-        - ConnectionStrings__DefaultConnection=Server=postgres:5432;User Id=postgres;Password=postgrespw;Database=auctions
-        - IdentityServiceUrl=http://identity-svc
-        - Kestrel__Endpoints__Grpc__Protocols=Http2 
-        - Kestrel__Endpoints__Grpc__Url=http://+:7777
-        - Kestrel__Endpoints__WebApi__Protocols=Http1 
-        - Kestrel__Endpoints__WebApi__Url=http://+:80
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - ASPNETCORE_URLS=http://+:7777
+      - RabbitMq__Host=rabbitmq
+      - ConnectionStrings__DefaultConnection=Server=postgres:5432;User
+        Id=postgres;Password=postgrespw;Database=auctions
+      - IdentityServiceUrl=http://identity-svc
+      - Kestrel__Endpoints__Grpc__Protocols=Http2
+      - Kestrel__Endpoints__Grpc__Url=http://+:7777
+      - Kestrel__Endpoints__WebApi__Protocols=Http1
+      - Kestrel__Endpoints__WebApi__Url=http://+:80
     ports:
-        - 7001:80
-        - 7777:7777
+      - 7001:80
+      - 7777:7777
     depends_on:
-        - postgres
-        - rabbitmq
+      - postgres
+      - rabbitmq
+    networks:
+      custom:
 
   search-svc:
     image: crossdev1989/search-svc:latest
     build:
-        context: .
-        dockerfile: src/SearchService/Dockerfile
+      context: .
+      dockerfile: src/SearchService/Dockerfile
     environment:
-        - ASPNETCORE_ENVIRONMENT=Development
-        - ASPNETCORE_URLS=http://+:80
-        - RabbitMq__Host=rabbitmq
-        - ConnectionStrings__MongoDbConnection=mongodb://root:mongopw@mongodb
-        - AuctionServiceUrl=http://auction-svc
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - RabbitMq__Host=rabbitmq
+      - ConnectionStrings__MongoDbConnection=mongodb://root:mongopw@mongodb
+      - AuctionServiceUrl=http://auction-svc
     ports:
-        - 7002:80
+      - 7002:80
     depends_on:
-        - mongodb
-        - rabbitmq
+      - mongodb
+      - rabbitmq
+    networks:
+      custom:
 
   identity-svc:
     image: crossdev1989/identity-svc:latest
     build:
-        context: .
-        dockerfile: src/IdentityService/Dockerfile
+      context: .
+      dockerfile: src/IdentityService/Dockerfile
     environment:
-        - ASPNETCORE_ENVIRONMENT=Docker
-        - ASPNETCORE_URLS=http://+:80
-        - ConnectionStrings__DefaultConnection=Server=postgres:5432;User Id=postgres;Password=postgrespw;Database=identity
-    ports:
-        - 5000:80
+      - ASPNETCORE_ENVIRONMENT=Docker
+      - ASPNETCORE_URLS=http://+:80
+      - ClientApp=http://app.carsties.com
+      - ConnectionStrings__DefaultConnection=Server=postgres:5432;User
+        Id=postgres;Password=postgrespw;Database=identity
+      - VIRTUAL_HOST=id.carsties.com
     depends_on:
-        - postgres
+      - postgres
+    networks:
+      custom:
+        ipv4_address: 10.5.0.200
 
   bid-svc:
     image: crossdev1989/bid-svc:latest
     build:
-        context: .
-        dockerfile: src/BiddingService/Dockerfile
+      context: .
+      dockerfile: src/BiddingService/Dockerfile
     environment:
-        - ASPNETCORE_ENVIRONMENT=Development
-        - ASPNETCORE_URLS=http://+:80
-        - RabbitMq__Host=rabbitmq
-        - ConnectionStrings__BidDbConnection=mongodb://root:mongopw@mongodb
-        - IdentityServiceUrl=http://identity-svc
-        - GrpcAuction=http://auction-svc:7777
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - RabbitMq__Host=rabbitmq
+      - ConnectionStrings__BidDbConnection=mongodb://root:mongopw@mongodb
+      - IdentityServiceUrl=http://identity-svc
+      - GrpcAuction=http://auction-svc:7777
     ports:
-        - 7003:80
+      - 7003:80
     depends_on:
-        - mongodb
-        - rabbitmq
+      - mongodb
+      - rabbitmq
+    networks:
+      custom:
 
   notify-svc:
     image: crossdev1989/notify-svc:latest
     build:
-        context: .
-        dockerfile: src/NotificationService/Dockerfile
+      context: .
+      dockerfile: src/NotificationService/Dockerfile
     environment:
-        - ASPNETCORE_ENVIRONMENT=Development
-        - ASPNETCORE_URLS=http://+:80
-        - RabbitMq__Host=rabbitmq
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - RabbitMq__Host=rabbitmq
     ports:
-        - 7004:80
+      - 7004:80
     depends_on:
-        - rabbitmq
+      - rabbitmq
+    networks:
+      custom:
 
   gateway-svc:
     image: crossdev1989/gateway-svc:latest
     build:
-        context: .
-        dockerfile: src/GatewayService/Dockerfile
+      context: .
+      dockerfile: src/GatewayService/Dockerfile
     environment:
-        - ASPNETCORE_ENVIRONMENT=Docker
-        - ASPNETCORE_URLS=http://+:80
-    ports:
-        - 6001:80
+      - ASPNETCORE_ENVIRONMENT=Docker
+      - ASPNETCORE_URLS=http://+:80
+      - ClientApp=https://app.carsties.com
+      - VIRTUAL_HOST=api.carsties.com
+    networks:
+      custom:
+
+  web-app:
+    image: crossdev1989/web-app
+    build:
+      context: .
+      dockerfile: frontend/web-app/Dockerfile
+    volumes:
+      - /var/lib/web/data
+    extra_hosts:
+      - id.carsties.com:10.5.0.200
+    environment:
+      - NEXTAUTH_SECRET=somethingreallysecret
+      - NEXTAUTH_URL=http://app.carsties.com
+      - NEXTAUTH_URL_INTERNAL=http://web-app:3000
+      - API_URL=http://gateway-svc
+      - ID_URL=http://id.carsties.com
+      - NEXT_PUBLIC_NOTIFY_URL=http://gateway-svc/notifications
+      - VIRTUAL_HOST=app.carsties.com
+      - VIRTUAL_PORT=3000
+    networks:
+      custom:
+
+networks:
+  custom:
+    ipam:
+      config:
+        - subnet: 10.5.0.0/16
