--- a/src/SearchService/SearchService.csproj
+++ b/src/SearchService/SearchService.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.11" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
 		<PackageReference Include="MongoDB.Entities" Version="22.1.0" />
+		<PackageReference Include="Polly" Version="7.2.4" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	</ItemGroup>
 
